# gpu-burn

./: CMakeLists.txt  Dockerfile  Makefile  gpu_burn-drv.cpp  run_gpu_burn  t1752.cu
